tests/machine/x/java/group_items_iteration.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsgroup_items_iteration2173531648/001/GroupItemsIteration.java:43: error: local variables referenced from an inner class must be final or effectively final
	for (var r : tmp) {
	             ^
Note: /tmp/TestCompileValidProgramsgroup_items_iteration2173531648/001/GroupItemsIteration.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error


  1| let data = [
  2|   {tag: "a", val: 1},